[package]
name = "stm32f303-rtfm-usb-example"
version = "0.2.0"
authors = ["Samuel Karlsson <samuel_karlsson@outlook.com>"]
edition = "2018"

[dependencies]
cortex-m-semihosting    = "0.3.5"
panic-semihosting       = "0.5.3"
cortex-m                = "0.6.1"
usb-device              = "0.2.3"
usbd-serial             = "0.1"

[dependencies.stm32f3xx-hal]
version = "0.3.0"
features = ["rt", "stm32f303xc",]
path = "../stm32f3xx-hal"

[dependencies.cortex-m-rtfm]
version = "0.4.3"
#features = ["timer-queue"]
